c/main.css
* {
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
}

h1 {
	text-align:center;
}
 
#container {
  display:block;
  position: relative;
  width:960px;
  margin:auto;
}


#vid {
	width:352px;
	height:288px;
}

.col1 {
	float:left;
	width:360px;
	border:1px solid black;
	margin-right: 5%;
}
 

.col2 {
	float:left;
	width:50%;
}


iframe {
	width:100%;
	height:300px;
}

#caption {
  position: absolute;
  width: 355px;
  left: 0;
  margin-top:-3.5em;
  min-height:3em;
  text-align: center;
  font-family: sans-serif;
  font-weight: bold;
  color: white;
  text-shadow: black 1px 1px 3px;
  padding-bottom: .5em;
  background-color:hsla(250,10%,50%,0.8)
}

#transcript span {
  display:table-row;
}

/* show the timings in square brackets before each "subtitle" in the transcript. */
#transcript [data-begin]:before {
  content: " [" attr(data-begin) "s-" attr(data-end)"s]   "; 
  font-size:80%; 
  display:table-cell; 
  padding-right:1em;
}


.pop {
	position:absolute;
	top:0;
	left:0;
	background:rgba(99, 77, 55, .5);
	color:#fff;
	border:3px solid red;
	padding:15px;
	font-weight:bold;
	z-index:3;
  opacity: 1;
  transition: all .1s;
}



.hide {
  opacity:0;
  transition: all 3s;
}

